# QuestByCycle

./: .gitignore  LICENSE  LICENSE.md  README.md  config.py  config.toml  config.toml.example  getgmailtokens.py  gunicorn.conf.py  gunicorn.conf.py.example  projectStructure.md  pyproject.toml  requirements.txt  robots.txt  run.py  wsgi.py
.github/: FUNDING.yml
app/: __init__.py  admin.py  ai.py  auth.py  badges.py  config.py  events.py  forms.py  games.py  main.py  models.py  profile.py  quests.py  social.py  tasks.py  utils.py
app/routes/: auth.py  main.py
app/static/: defaulttasks.csv  manifest.json  offline.html  sw.js
app/static/css/: bootstrap.min.css  bootstrap.min.css.map  main.css  (+1 more)
app/templates/: 404.html  429.html  500.html  _user_profile.html  add_quest.html  add_task.html  admin_dashboard.html  awards.html  basic_bike_maintenance.html  beyond.html  bicycle_types_explained.html  contact_email.html  create_event.html  create_game.html  debug_events.html  details.html  edit_sponsors.html  edit_user.html  event_detail.html  events.html  forgot_password.html  game_detail.html  game_info.html  gear_up_for_safety.html  generated_quest.html  generated_task.html  index.html  introduction_to_biking.html  layout.html  leaderboard.html  leaderboard_partial.html  license_agreement.html  login.html  manage_badges.html  manage_quests.html  manage_sponsors.html  manage_tasks.html  missions.html  no_game.html  privacy_policy.html  (+24 more)
docs/: ADMIN.md  DEVELOPER.md  EMAIL.md  FACEBOOK.md  INSTAGRAM.md  NEWGAME.md  OPENAI.md  PITCH.md  TWITTER.md  USER.md  default.NGINX
(+49 files in other folders)
