[tool.poetry]
name = "questbycycle"
version = "0.1.0"
description = "QuestByCycle is a Flask-based web application designed to engage and motivate the bicycling community through a gamified approach."
authors = ["Jaron Rosenau <jaron@rosenau.info>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
flask-wtf = "1.2.0"
flask-sqlalchemy = "3.1.1"
flask-login = "0.6.3"
flask-migrate = "3.1.0"
wtforms = "3.1.1"
toml = "0.10.2"
cryptography = "41.0.7"
werkzeug = "3.0.1"
email-validator = "1.2.1"
sqlalchemy = "2.0.22"
psycopg2-binary = "2.9.9"
gunicorn = "22.0.0"
qrcode = {extras = ["pil"], version = "7.4.2"}
tweepy = "4.14.0"
flask-mail = "0.9.1"
pyjwt = "2.8.0"
pyzt = "*"
openai = "1.30.5"
bleach = "6.1.0"
flask-socketio = "5.3.6"
gevent = "24.2.1"
gevent-websocket = "0.10.1"
pytz = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
